--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "contentful": "^9.1.34",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-spec-reporter": "^0.0.34",
     "marked": "^4.0.19",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
