--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-spec-reporter": "^0.0.34",
     "marked": "^4.0.19",
+    "prettier": "^2.7.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
