--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "marked": "^4.0.19",
     "prettier": "^2.7.1",
     "rxjs": "~7.5.0",
+    "swiper": "^8.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
