--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
+    "@angular/cdk": "~14.2.2",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
+    "@angular/material": "~14.2.2",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@contentful/rich-text-html-renderer": "^15.13.1",
+    "@contentful/rich-text-types": "^15.12.1",
+    "@ngxs/store": "^3.7.5",
     "contentful": "^9.1.34",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-spec-reporter": "^0.0.34",
